--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,20 +14,22 @@ html {
 	/* colors */
 
 	/* Primary color */
-	--primary-blue: #0057ff;
+	--primary-blue: rgb(61, 88, 193);
 	--primary-point: #ff619a;
 	--primary-yellow: #ffcf00;
 	--primary-green: #7ada00;
 	--primary-purple: #b586f8;
 
 	/* Sub color */
+	--sub-blue: rgb(9, 125, 233);
+	/* --sub-blue: rgb(29, 153, 255); */
 	--sub-pink: #ff8eb7;
-	--sub-blue1: #5f95ff;
-	--sub-light-blue: #c5eaff;
+	--sub-light-blue: rgb(241, 243, 253);
 	--sub-light-pink: #ffdbe8;
 	--sub-light-yellow: #ffeb96;
 	--sub-light-green: #d3f5a7;
 	--sub-light-purple: #ebddff;
+	--sub-dark-blue: rgb(28, 38, 56);
 
 	/* Gray color */
 	--light-gray1: #eff4ea;
@@ -40,7 +42,10 @@ html {
 
 	/* B&W */
 	--primary-white: #ffffff;
-	--primary-black: #000000;
+	--primary-black: #0e0e0e;
+
+	--primary-border: rgb(0, 0, 238);
+	--primary-font-color: rgb(43, 54, 72);
 
 	/* Font Style */
 	--primary-font: "Noto Sans KR", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
@@ -146,22 +151,8 @@ textarea::placeholder {
 	color: #a8a8a8;
 }
 
-/* 모바일 기기 (화면 너비가 768px 미만일 때) */
-@media only screen and (max-width: 768px) {
-	body {
-		overflow-y: auto; /* 모바일에서는 스크롤 허용 */
-	}
+input:focus {
+	border: 1px solid var(--sub-blue);
+	outline: none;
+	outline-offset: 2px;
 }
-
-/* 데스크탑 및 더 큰 화면 */
-@media only screen and (min-height: 1080px) {
-	body {
-		overflow: hidden; /* 데스크탑에서는 스크롤 방지 */
-	}
-}
-
-/* @media (max-width: 1200px) {
-  html {
-    font-size: 50%;
-  }
-} */
