--- a/src/styles/daypicker.module.css
+++ b/src/styles/daypicker.module.css
@@ -1,73 +1,68 @@
 .container {
 	font-family: var(--primary-font);
 	z-index: 2;
+	right: 50%;
 	margin-top: -10px;
-	background-color: var(--primary-white);
-	box-shadow: rgba(0, 0, 0, 0.21) 0px 4px 12px 0px;
-	/* box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff; */
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	-ms-border-radius: 5px;
-	-o-border-radius: 5px;
 }
 
 .inputBar {
 	font-family: inherit;
-	width: 50%;
-	height: 80px;
 	position: relative;
-	padding: 10px;
-}
-
-.searchBtn {
-	font-family: inherit;
-	position: absolute;
-	top: 50%;
-	right: 20px;
-	min-width: 80px;
-	padding: 10px;
-	font-weight: 500;
-	border-radius: 5px;
-	transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);
-	-moz-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	-o-transform: translateY(-50%);
-}
-
-.resetBtn {
-	font-family: inherit;
-	position: absolute;
-	top: 50%;
-	right: 140px;
-	min-width: 80px;
-	padding: 10px;
-	font-weight: 500;
-	border-radius: 5px;
-	transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);
-	-moz-transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	-o-transform: translateY(-50%);
-}
-
-.popupBar {
-	font-family: inherit;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
 	height: 60px;
-	margin: 0 auto;
-	padding: 20px;
+	margin-bottom: 20px;
+	padding: 5px 20px;
 	font-weight: 700;
 	border: 1px solid var(--sub-blue);
+	background-color: var(--primary-white);
 	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	-ms-border-radius: 5px;
-	-o-border-radius: 5px;
+}
+
+.inputBar > svg {
+	position: absolute;
+	right: 20px;
+	font-size: 2em;
+	color: var(--sub-blue);
+}
+
+.btnContainer {
+	/* font-family: var(--primary-font); */
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	width: 100%;
+	height: 100%;
+}
+
+.searchBtn {
+	font-family: inherit;
+	height: 40px;
+	padding: 10px;
+	border: 1px solid var(--primary-gray2);
+	border-radius: 5px;
+}
+
+.resetBtn {
+	font-family: inherit;
+	height: 40px;
+	padding: 10px;
+	border: 1px solid var(--primary-gray2);
+	border-radius: 5px;
+}
+
+.btnActive {
+	font-family: inherit;
+	height: 40px;
+	padding: 10px;
+	color: var(--primary-white);
+	font-weight: 700;
+	border-radius: 5px;
+	background: linear-gradient(290.64deg, rgb(22, 59, 216) 6.63%, rgb(61, 167, 255) 107.33%);
+	box-shadow: rgba(16, 26, 46, 0.21) 0px 4px 12px;
 }
 
 .closeIcon {
