--- a/src/styles/daypicker.module.css
+++ b/src/styles/daypicker.module.css
@@ -44,6 +44,7 @@
 	padding: 10px;
 	border: 1px solid var(--primary-gray2);
 	border-radius: 5px;
+	cursor: default;
 }
 
 .resetBtn {
@@ -52,6 +53,7 @@
 	padding: 10px;
 	border: 1px solid var(--primary-gray2);
 	border-radius: 5px;
+	cursor: default;
 }
 
 .btnActive {
@@ -63,6 +65,7 @@
 	border-radius: 5px;
 	background: linear-gradient(290.64deg, rgb(22, 59, 216) 6.63%, rgb(61, 167, 255) 107.33%);
 	box-shadow: rgba(16, 26, 46, 0.21) 0px 4px 12px;
+	cursor: pointer;
 }
 
 .closeIcon {
