--- a/src/styles/loading.module.css
+++ b/src/styles/loading.module.css
@@ -1,6 +1,9 @@
 .container {
+	position: relative;
+	z-index: 4;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: calc(100vh - 120px);
+	background-color: var(--primary-white);
 }
