--- a/src/styles/result-info.module.css
+++ b/src/styles/result-info.module.css
@@ -3,12 +3,13 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: calc(100vh - 70px);
+	height: calc(100vh - 170px);
 }
 
 .inner {
 	width: 100%;
 	min-height: 200px;
+	margin-top: 100px;
 	text-align: center;
 }
 
