--- a/src/styles/go-back.module.css
+++ b/src/styles/go-back.module.css
@@ -2,7 +2,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 4;
+	/* z-index: 4; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -16,7 +16,7 @@
 	/* font-family: var(--primary-font); */
 	position: relative;
 	display: flex;
-	justify-content: flex-start;
+	justify-content: flex-end;
 	align-items: center;
 	width: 100%;
 	height: 100%;
