--- a/src/styles/search-event-day.module.css
+++ b/src/styles/search-event-day.module.css
@@ -10,6 +10,10 @@
 	box-shadow: rgba(0, 0, 0, 0.21) 0px 4px 12px 0px;
 	transform: translateX(-100%);
 	transition: transform 0.3s ease;
+	-webkit-transition: transform 0.3s ease;
+	-moz-transition: transform 0.3s ease;
+	-ms-transition: transform 0.3s ease;
+	-o-transition: transform 0.3s ease;
 }
 
 .show {
