--- a/src/styles/show-detail.module.css
+++ b/src/styles/show-detail.module.css
@@ -11,7 +11,6 @@
 	line-height: 21px;
 	border-top: 1px solid var(--primary-gray3);
 	border-bottom: 1px solid var(--primary-gray3);
-	cursor: pointer;
 }
 
 .eventItem:hover {
@@ -26,6 +25,7 @@
 
 .holidayDate {
 	flex: 0 0 10.2%;
+	min-width: 200px;
 	padding: 0 0 0 12px;
 	font-size: 1.6rem;
 	box-sizing: border-box;
@@ -62,6 +62,7 @@
 	flex: 0 0 18.5%;
 	overflow: hidden;
 	display: block;
+	min-width: 300px;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 }
