--- a/src/styles/go-back.module.css
+++ b/src/styles/go-back.module.css
@@ -16,7 +16,7 @@
 	/* font-family: var(--primary-font); */
 	position: relative;
 	display: flex;
-	justify-content: flex-end;
+	justify-content: flex-start;
 	align-items: center;
 	width: 100%;
 	height: 100%;
