Update styles for custom.css, main-calendar.module.css, toggle-menu.module.css, go-back.module.css, and go-back.module.css

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -37,7 +37,7 @@
 	color: var(--primary-font-color);
 }
 
-/* day-picker custom */
+/* datepicker custom */
 .rdp {
 	font-family: var(--primary-font);
 	padding: 20px;
