--- a/src/styles/search-event-day.module.css
+++ b/src/styles/search-event-day.module.css
@@ -1,26 +1,94 @@
 .container {
-	overflow-y: auto;
 	display: block;
-	position: fixed;
-	z-index: 2;
-	min-width: 328px;
-	height: 100%;
+	position: relative;
+	left: 0;
+	width: 100%;
 	padding: 10px;
-	background-color: var(--sub-light-blue);
-	box-shadow: rgba(0, 0, 0, 0.21) 0px 4px 12px 0px;
-	transform: translateX(-100%);
-	transition: transform 0.3s ease;
-	-webkit-transition: transform 0.3s ease;
-	-moz-transition: transform 0.3s ease;
-	-ms-transition: transform 0.3s ease;
-	-o-transition: transform 0.3s ease;
+	
 }
 
 .show {
+	opacity: 1;
+	z-index: 2;
 	transform: translateX(0);
+	-webkit-transform: translateX(0);
+	-moz-transform: translateX(0);
+	-ms-transform: translateX(0);
+	-o-transform: translateX(0);
 }
 
+/*
 .container > div {
 	position: relative;
 	top: 60px;
+} */
+
+.inputBar {
+	font-family: inherit;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 60px;
+	margin-bottom: 20px;
+	padding: 5px 20px;
+	font-weight: 700;
+	border: 1px solid var(--sub-blue);
+	background-color: var(--primary-white);
+	border-radius: 5px;
+}
+
+.inputBar > svg {
+	position: absolute;
+	right: 20px;
+	font-size: 2em;
+	color: var(--sub-blue);
+}
+
+.btnContainer {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	width: 100%;
+	height: 100%;
+}
+
+.searchBtn {
+	font-family: inherit;
+	height: 40px;
+	padding: 10px;
+	border: 1px solid var(--primary-gray2);
+	border-radius: 5px;
+	cursor: default;
+}
+
+.resetBtn {
+	font-family: inherit;
+	height: 40px;
+	padding: 10px;
+	border: 1px solid var(--primary-gray2);
+	border-radius: 5px;
+	cursor: default;
+}
+
+.btnActive {
+	font-family: inherit;
+	height: 40px;
+	padding: 10px;
+	color: var(--primary-white);
+	font-weight: 700;
+	border-radius: 5px;
+	background: linear-gradient(290.64deg, rgb(22, 59, 216) 6.63%, rgb(61, 167, 255) 107.33%);
+	box-shadow: rgba(16, 26, 46, 0.21) 0px 4px 12px;
+	cursor: pointer;
+}
+
+.closeIcon {
+	position: absolute;
+	top: 10px;
+	right: 5px;
+	font-size: 2rem;
+	background-color: transparent;
 }
