--- a/src/styles/go-back.module.css
+++ b/src/styles/go-back.module.css
@@ -32,7 +32,7 @@
 .btnContainer {
 	position: relative;
 	display: flex;
-	justify-content: flex-start;
+	justify-content: space-between;
 	align-items: center;
 	width: 100%;
 	height: 100%;
