Refactor DatePickerBar component to improve date selection and add custom header

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -56,53 +56,59 @@
 	display: none !important;
 }
 
-.rdp {
-	font-family: var(--primary-font);
-	padding: 20px;
-	background-color: var(--primary-white);
-	box-shadow: rgba(0, 0, 0, 0.04) 0px 1px 24px;
-	border-radius: 5px;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	-ms-border-radius: 5px;
-	-o-border-radius: 5px;
+.react-datepicker__day-name,
+.react-datepicker__day,
+.react-datepicker__time-name {
+	width: 2.2rem !important;
+	margin: 0.3rem !important;
 }
 
-.rdp:not([dir="rtl"]) .rdp-day_range_start:not(.rdp-day_range_end) {
-	border-radius: 100% !important;
-	-webkit-border-radius: 100% !important;
-	-moz-border-radius: 100% !important;
-	-ms-border-radius: 100% !important;
-	-o-border-radius: 100% !important;
+.react-datepicker__day,
+.react-datepicker__month-text,
+.react-datepicker__quarter-text,
+.react-datepicker__year-text {
+	width: 2.2rem !important;
+	margin: 0.3rem !important;
+	line-height: 2.2rem !important;
 }
 
-.rdp:not([dir="rtl"]) .rdp-day_range_end:not(.rdp-day_range_start) {
-	border-radius: 100% !important;
-	-webkit-border-radius: 100% !important;
-	-moz-border-radius: 100% !important;
-	-ms-border-radius: 100% !important;
-	-o-border-radius: 100% !important;
-}
-
-.rdp-day_range_middle {
-	border-radius: 100% !important;
-	-webkit-border-radius: 100% !important;
-	-moz-border-radius: 100% !important;
-	-ms-border-radius: 100% !important;
-	-o-border-radius: 100% !important;
-}
-
-.rdp-tfoot {
-	position: absolute;
-	top: 13px;
-	left: 50%;
-	min-width: 215px;
-	color: var(--primary-gray1);
-	font-size: 1.5rem;
-	font-weight: 500;
-	transform: translateX(-50%);
-}
-
-.rdp-day_selected {
+.react-datepicker__day:hover,
+.react-datepicker__month-text:hover,
+.react-datepicker__quarter-text:hover,
+.react-datepicker__year-text:hover {
+	border-radius: 50% !important;
 	background-color: var(--sub-blue) !important;
+}
+
+.react-datepicker__day--keyboard-selected,
+.react-datepicker__month-text--keyboard-selected,
+.react-datepicker__quarter-text--keyboard-selected,
+.react-datepicker__year-text--keyboard-selected {
+	border-radius: 50% !important;
+	background-color: var(--sub-blue) !important;
+}
+
+.react-datepicker__day--selected,
+.react-datepicker__day--in-selecting-range,
+.react-datepicker__day--in-range,
+.react-datepicker__month-text--selected,
+.react-datepicker__month-text--in-selecting-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--selected,
+.react-datepicker__quarter-text--in-selecting-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--selected,
+.react-datepicker__year-text--in-selecting-range,
+.react-datepicker__year-text--in-range {
+	border-radius: 50% !important;
+	background-color: var(--sub-blue) !important;
+}
+
+.react-datepicker__month-container {
+	width: 250px;
+	font-size: 1.2rem;
+}
+
+.react-datepicker__week {
+	font-size: 1.2rem;
 }
