--- a/src/styles/datepicker.module.css
+++ b/src/styles/datepicker.module.css
@@ -3,17 +3,23 @@
 	position: relative;
 	display: flex;
 	z-index: 2;
-	width: calc(100% - 200px);
+	width: calc(100% - 250px);
+	height: 50px;
 }
 
 .inputBar {
 	font-family: inherit;
-	position: relative;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	gap: 10px;
 	width: 100%;
+	min-width: 800px;
 	padding: 5px 20px;
 	font-weight: 700;
 	border: 1px solid var(--sub-blue);
@@ -32,9 +38,49 @@
 	color: var(--sub-blue);
 }
 
+.inputBar .dash {
+	margin: 0 8px;
+	font-size: 3rem;
+	font-weight: 400;
+	color: var(--primary-gray1);
+}
+
+.customHeader {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 10px;
+	font-size: 25px;
+}
+
+.customHeader select {
+	font-size: inherit;
+	outline: none;
+}
+
+.customHeader button {
+	padding: 10px;
+	font-size: 2rem;
+}
+
+.customHeader button:hover {
+	background-color: var(--sub-light-blue);
+	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-ms-border-radius: 50%;
+	-o-border-radius: 50%;
+}
+
+.selectYear {
+	border: 0;
+	background-color: transparent;
+}
+
 .btnContainer {
 	position: relative;
 	display: flex;
+	align-items: center;
 	gap: 10px;
 	width: 100%;
 	height: 100%;
