--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -83,7 +83,11 @@
 	justify-content: center;
 	align-items: center;
 	height: 40px;
+	margin-bottom: 5px;
 	font-size: 1.2rem;
+}
+.react-datepicker__week:last-child {
+	margin-bottom: 0;
 }
 
 .react-datepicker__day-name,
