--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,14 +1,14 @@
 /* fullCalendar custom */
 .fc .fc-toolbar.fc-header-toolbar .fc-toolbar-chunk:first-child {
-	margin-left: 60px;
+	margin-left: 100px;
 }
 .fc-toolbar-title {
 	font-size: 1.5rem;
-	color: var(--sub-dark-blue);
+	color: var(--primary-font-color);
 }
 
 .fc .fc-button-primary {
-	color: var(--sub-blue);
+	color: var(--primary-color);
 	font-weight: 700;
 	background-color: var(--sub-light-blue);
 	border: 0;
@@ -16,16 +16,17 @@
 
 .fc .fc-button-group > .fc-button.fc-button-active {
 	color: var(--primary-white);
-	background-color: var(--sub-blue);
+	background-color: var(--primary-color);
 }
 
 .fc .fc-button-primary:hover {
-	color: var(--sub-blue);
+	color: var(--primary-color);
 	background-color: var(--sub-light-blue);
 }
 
 .fc-h-event {
-	background-color: var(--sub-blue);
+	background-color: var(--primary-color);
+	border: 1px solid var(--primary-color);
 }
 
 .fc .fc-button-primary:disabled {
@@ -35,6 +36,17 @@
 
 .fc .fc-daygrid-day-number {
 	color: var(--primary-font-color);
+}
+
+.fc .fc-daygrid-day.fc-day-today .fc-daygrid-day-number {
+	color: var(--primary-white);
+	background-color: var(--primary-color);
+	border-radius: 50%;
+	padding: 10px;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-ms-border-radius: 50%;
+	-o-border-radius: 50%;
 }
 
 /* datepicker custom */
@@ -47,7 +59,6 @@
 	display: flex !important;
 	flex-direction: row-reverse;
 	align-items: center;
-	height: 40px;
 }
 
 .react-datepicker__tab-loop {
@@ -61,9 +72,14 @@
 
 .react-datepicker__view-calendar-icon input {
 	width: 150px;
+	height: 40px;
 	border: 0;
-	border-bottom: 1px solid var(--sub-blue);
-	background-color: #dde9ef;
+	border-bottom: 1px solid var(--accent-color);
+	background-color: #f0f0f0;
+}
+
+.react-datepicker__input-container .react-datepicker__calendar-icon {
+	fill: var(--accent-color);
 }
 
 .react-datepicker__month-container {
@@ -96,7 +112,8 @@
 	width: 40px !important;
 	height: 40px;
 	margin: 0 !important;
-	line-height: 3.5rem !important;
+	color: var(--primary-font-color) !important;
+	line-height: 4rem !important;
 }
 
 .react-datepicker__day,
@@ -109,7 +126,7 @@
 	width: 40px !important;
 	height: 40px;
 	margin: 0 !important;
-	line-height: 3.5rem !important;
+	line-height: 4rem !important;
 }
 
 .react-datepicker__day:hover,
@@ -117,7 +134,7 @@
 .react-datepicker__quarter-text:hover,
 .react-datepicker__year-text:hover {
 	border-radius: 50% !important;
-	background-color: var(--sub-light-blue) !important;
+	background-color: var(--hover-color) !important;
 }
 
 .react-datepicker__day--keyboard-selected,
@@ -126,7 +143,7 @@
 .react-datepicker__year-text--keyboard-selected {
 	color: var(--primary-white) !important;
 	border-radius: 50% !important;
-	background-color: var(--sub-blue) !important;
+	background-color: var(--primary-color) !important;
 }
 
 .react-datepicker__day--selected,
@@ -141,8 +158,9 @@
 .react-datepicker__year-text--selected,
 .react-datepicker__year-text--in-selecting-range,
 .react-datepicker__year-text--in-range {
+	color: var(--primary-white) !important;
 	border-radius: 50% !important;
-	background-color: var(--sub-blue) !important;
+	background-color: var(--primary-color) !important;
 }
 
 .react-datepicker__day--outside-month {
