--- a/src/styles/go-back.module.css
+++ b/src/styles/go-back.module.css
@@ -1,13 +1,14 @@
 .container {
 	opacity: 0;
+	visibility: hidden;
 	position: fixed;
 	top: 0;
 	left: 0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	min-height: 70px;
 	width: 100%;
+	min-height: 70px;
 	background-color: var(--sub-light-blue);
 	/* box-shadow: rgba(16, 26, 46, 0.21) 0px 4px 12px; */
 	box-shadow: rgba(0, 0, 0, 0.21) 0px 4px 12px 0px;
@@ -21,6 +22,7 @@
 
 .show {
 	opacity: 1;
+	visibility: visible;
 	z-index: 2;
 	transform: translateX(0);
 	-webkit-transform: translateX(0);
@@ -45,11 +47,11 @@
 }
 
 .goBackBtn > svg {
-	color: var(--sub-dark-blue);
+	color: var(--primary-font-color);
 }
 
 .goBackBtn + span {
 	margin-left: 10px;
-	color: var(--sub-dark-blue);
+	color: var(--primary-font-color);
 	font-size: 2rem;
 }
