--- a/src/styles/logo.module.css
+++ b/src/styles/logo.module.css
@@ -9,9 +9,10 @@
 
 .icon {
 	width: 100%;
-	height: 28px;
-	margin: 6px 6px 0 0;
-	filter: hue-rotate(24deg);
+	height: 35px;
+	margin: 6px 3px 0 0;
+	background-color: var(--primary-color);
+	border-radius: 50%;
 }
 
 .calendarIcon {
