--- a/src/styles/go-back.module.css
+++ b/src/styles/go-back.module.css
@@ -9,7 +9,7 @@
 	align-items: center;
 	width: 100%;
 	min-height: 70px;
-	background-color: var(--sub-light-blue);
+	background-color: var(--sub-light-color);
 	/* box-shadow: rgba(16, 26, 46, 0.21) 0px 4px 12px; */
 	box-shadow: rgba(0, 0, 0, 0.21) 0px 4px 12px 0px;
 	transition: transform 0.3s ease-in-out;
