--- a/src/styles/not-found.module.css
+++ b/src/styles/not-found.module.css
@@ -12,8 +12,9 @@
 	object-fit: contain;
 }
 
-.container h1 {
+.container h1.errorText {
+	margin-bottom: 0;
+	color: var(--error-color);
 	font-size: 2.5rem;
 	font-weight: 700;
-	margin-bottom: 0;
 }
