--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -48,10 +48,8 @@
 }
 
 .fc-h-event {
-	height: 30px;
 	background-color: var(--primary-color);
 	border: 1px solid var(--primary-color);
-	line-height: 30px;
 }
 
 .fc .fc-button-primary:disabled {
@@ -68,14 +66,7 @@
 }
 
 .fc .fc-daygrid-day.fc-day-today .fc-daygrid-day-number {
-	color: var(--primary-white);
-	background-color: var(--primary-color);
-	border-radius: 50%;
-	padding: 5px;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-ms-border-radius: 50%;
-	-o-border-radius: 50%;
+	color: var(--primary-color);
 }
 
 /* datepicker custom */
@@ -198,34 +189,48 @@
 
 @media (max-width: 568px) {
 	.fc .fc-toolbar.fc-header-toolbar {
-		flex-direction: column;
+		position: relative;
+		/* flex-direction: row-reverse; */
 		width: 100%;
 		min-width: unset;
+	}
+
+	.fc .fc-toolbar.fc-header-toolbar .fc-toolbar-chunk:first-child {
+		/* margin-left: 0; */
+	}
+
+	.fc-toolbar-title {
+		min-width: 100px;
+		font-size: 1.6rem !important;
+	}
+
+	.fc .fc-button-group > .fc-button {
+		padding: 5px 2px;
+	}
+}
+
+@media (max-width: 500px) {
+	.fc .fc-searchButton-button {
+		position: absolute;
+		top: -45px;
+		right: 0;
+		background-size: 30px 30px;
+	}
+
+	.calendar-container {
+		margin-top: 40px;
 	}
 
 	.fc .fc-toolbar.fc-header-toolbar .fc-toolbar-chunk:first-child {
 		margin-left: 0;
 	}
 
+	.fc .fc-button-group > .fc-button {
+		padding: 0.4em 0.65em;
+	}
+
 	.fc-toolbar-title {
-		min-width: 100%;
-		font-size: 1.2rem;
-	}
-
-	.fc-searchButton-button {
-		width: 30px;
-		height: 30px;
-		padding: 5px !important;
-		font-size: 1.5em !important;
-		background-size: 20px 20px;
-	}
-
-	.fc .fc-daygrid-day.fc-day-today .fc-daygrid-day-number {
-		padding: 3px;
-	}
-
-	.react-datepicker__input-container .react-datepicker__calendar-icon {
-		width: 30px;
-		height: 30px;
+		min-width: 80px;
+		font-size: 1.4rem !important;
 	}
 }
