--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -143,3 +143,13 @@ input:focus {
 	outline: none;
 	outline-offset: 2px;
 }
+
+select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	background-image: url("/assets/images/arrow-down.svg");
+	background-repeat: no-repeat;
+	background-position: 98% 50%;
+	background-size: 20px 20px;
+}
