--- a/src/components/popup/event-popup.module.css
+++ b/src/components/popup/event-popup.module.css
@@ -1,8 +1,6 @@
 .popup {
 	position: absolute;
 	z-index: 2;
-	left: 0;
-	top: 0;
 	width: 200px;
 	height: 150px;
 }
@@ -43,4 +41,15 @@
 	justify-content: space-between;
 	font-size: 1.6rem;
 	color: var(--primary-font-color);
+}
+
+@media (max-width: 480px) {
+	.popup {
+		left: 50% !important;
+		transform: translateX(-50%) !important;
+		-webkit-transform: translateX(-50%) !important;
+		-moz-transform: translateX(-50%) !important;
+		-ms-transform: translateX(-50%) !important;
+		-o-transform: translateX(-50%) !important;
+	}
 }
