Update CSS styles for event actions, form, and popup

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -78,6 +78,10 @@
 	pointer-events: none;
 }
 
+.fc-daygrid-event-dot {
+	border: calc(var(--fc-daygrid-event-dot-width) / 2) solid var(--primary-color)
+}
+
 /* datepicker custom */
 
 .react-datepicker {
