--- a/src/components/popup/event-popup.module.css
+++ b/src/components/popup/event-popup.module.css
@@ -1,7 +1,7 @@
 .popup {
 	position: absolute;
 	z-index: 2;
-	width: 220px;
+	width: 240px;
 	min-height: 150px;
 }
 
@@ -10,7 +10,7 @@
 	width: 100%;
 	height: 100%;
 	margin: 30px auto;
-	padding: 20px;
+	padding: 40px 20px 30px;
 	border: 1px solid var(--sub-light-color);
 	background-color: var(--primary-white);
 	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
