--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -72,14 +72,25 @@
 }
 
 .fc-day-other .fc-event {
+	opacity: 0.5;
+	color: var(--primary-white);
 	background-color: var(--primary-gray2);
 	border: 1px solid var(--primary-gray2);
 	cursor: default;
 	pointer-events: none;
 }
 
+.fc-day-other .fc-daygrid-day-bg .fc-highlight {
+	opacity: 0.3;
+}
+
 .fc-daygrid-event-dot {
-	border: calc(var(--fc-daygrid-event-dot-width) / 2) solid var(--primary-color)
+	border: calc(var(--fc-daygrid-event-dot-width) / 2) solid var(--primary-color);
+}
+
+.fc-theme-standard td,
+.fc-theme-standard th {
+	overflow: hidden;
 }
 
 /* datepicker custom */
@@ -199,6 +210,7 @@
 .react-datepicker__day--outside-month {
 	color: var(--primary-gray2) !important;
 }
+
 
 @media (max-width: 768px) {
 	.react-datepicker__view-calendar-icon input {
