--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -88,9 +88,13 @@
 	border: calc(var(--fc-daygrid-event-dot-width) / 2) solid var(--primary-color);
 }
 
-.fc-theme-standard td,
-.fc-theme-standard th {
+.fc-direction-ltr .fc-daygrid-event.fc-event-end,
+.fc-direction-rtl .fc-daygrid-event.fc-event-start {
 	overflow: hidden;
+}
+
+.fc .fc-popover {
+	z-index: 2 !important;
 }
 
 /* datepicker custom */
@@ -210,7 +214,6 @@
 .react-datepicker__day--outside-month {
 	color: var(--primary-gray2) !important;
 }
-
 
 @media (max-width: 768px) {
 	.react-datepicker__view-calendar-icon input {
