--- a/packages/yu-books/src/styles/globals.css
+++ b/packages/yu-books/src/styles/globals.css
@@ -14,25 +14,29 @@ html {
 
 :root {
 	/* Main colors */
-	--primary-color: #00b8ff;
-	--accent-color: #0179ff;
-	--accent-color2: #007bff;
+	--primary-color: #8d80b0;
+	--accent-color: #8397c4;
+	--accent-color2: #9e8dbf;
+	--hover-color: #efedf6;
+
+	/* Sub colors */
+	--sub-light-color: rgb(241, 243, 253);
 
 	/* Red */
 	--primary-red: #ff2c51;
 
 	/* Gray */
-	--primary-gray1: #f2f4f6;
-	--primary-gray2: #f7f8f9;
-	--primary-gray3: #c5c8ce;
+	--primary-gray1: #5c5c5c;
+	--primary-gray2: #b9b9b9;
+	--primary-gray3: #d9d9d9;
 
 	/* B&W */
 	--primary-white: #ffffff;
 	--primary-black: #0e0e0e;
 
 	/* Font */
-	--primary-title-color: #28323c;
-	--primary-font-color: #374553;
+	--primary-title-color: #62597b;
+	--primary-font-color: #2a2634;
 
 	/* Border */
 	--primary-border-color: #f8f9fb;
@@ -200,5 +204,17 @@ select {
 	width: 1px;
 	height: 14px;
 	margin-left: 10px;
+	background-color: var(--primary-gray3);
+}
+
+/* scroll 커스텀 스타일 */
+.scrollbar::-webkit-scrollbar {
+	width: 0;
+	height: 2px;
+}
+.scrollbar::-webkit-scrollbar-thumb {
+	background-color: var(--primary-gray2);
+}
+.scrollbar::-webkit-scrollbar-track {
 	background-color: var(--primary-gray3);
 }
