--- a/packages/yu-books/src/components/logo/logo.module.css
+++ b/packages/yu-books/src/components/logo/logo.module.css
@@ -12,7 +12,7 @@
 .icon {
 	width: auto;
 	height: 35px;
-	margin: 6px 3px 0 0;
+	margin: 0 3px 0 0;
 	background-color: var(--primary-color);
 	border-radius: 50%;
 }
