--- a/packages/yu-books/src/styles/globals.css
+++ b/packages/yu-books/src/styles/globals.css
@@ -77,7 +77,7 @@ body {
 	min-height: 100%;
 	font-size: 1.4rem;
 	font-weight: 500;
-	background-color: var(--primary-gray1);
+	/* background-color: var(--primary-gray1); */
 }
 
 /* 리스트 스타일 초기화 */
