Feat: Implement HolidayProvider and HolidayTotalCount components for improved holiday data management and display

--- a/packages/yu-calendar/src/app/result-info/page.module.css
+++ b/packages/yu-calendar/src/app/result-info/page.module.css
@@ -21,9 +21,10 @@
 	.container {
 		margin-top: 50px;
 	}
+
+	.inner {
+		margin-top: 0;
+	}
 }
 @media (max-width: 640px) {
-	.container {
-		margin-top: 140px;
-	}
 }
