--- a/packages/yu-books/src/components/icons/loading.module.css
+++ b/packages/yu-books/src/components/icons/loading.module.css
@@ -1,9 +1,14 @@
 .container {
-	position: relative;
+	position: absolute;
 	z-index: 5;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
+	width: 100%;
+	height: calc(100vh - 200px);
 	background-color: var(--primary-white);
 }
